--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>帥哥大叔</title>
   </head>
   <body>
-    <img src="https://raw.githubusercontent.com/tewei0328/picture1/master/1.jpg" alt="好帥">
+    <img src="https://raw.githubusercontent.com/tewei0328/picture1/master/1.jpg" alt="洪逵罐">
   </body>
 </html>
